--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -36,7 +36,7 @@
             {% else %}
               {% include "menuitem_report.html" with active=menu_report %}
             {% endif %}
-            <li><a class="dropdown-item" href="/manual/" target="_blank">Documentation</a></li>
+            <li class="nav-item"><a class="nav-link" href="/manual/" target="_blank">Documentation</a></li>
           </ul>
           {% block navsearch %}
           <form class="d-flex">
