--- a/kooplexhub/hub/templates/project/configure.html
+++ b/kooplexhub/hub/templates/project/configure.html
@@ -53,10 +53,7 @@
         {% endif %}
     </div>
   </div>
-  <div class="float-end">
-    <button type="submit" class="btn btn-primary" name="button" value="aply">Apply settings</button>
-    <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
-  </div>
+  {% include 'apply_cancel.html' %}
 </form>
 {% endblock %}
 
