--- a/kooplexhub/hub/templates/report/hint_list.html
+++ b/kooplexhub/hub/templates/report/hint_list.html
@@ -1,16 +1,8 @@
 <div class="card"> 
   <h6 class="card-head">Report</h6>
   <div class="card-body">
-    <ul>
-      <li><span class="badge badge-pill badge-info">HTML</span> - static or interactive 
-      	<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-      <li><span class="badge badge-pill badge-success">NB</span> - notebook
-      	<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-      <li><span class="badge badge-pill badge-warning">API</span> - an application with functional endpoints
-      	<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-      <li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application
-      	<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-    </ul>
+    <p>Reports can be open if report service is present and running. Creator may start and stop them.</p>
+    <p>A report may be recreated by any collaborator of the associated project.</p>
   </div>
 </div>
 
