--- a/kooplexhub/hub/templates/report/newreport.html
+++ b/kooplexhub/hub/templates/report/newreport.html
@@ -12,10 +12,7 @@
       {{ f_report.r_tree }}
     </table>
     <div class="modal-footer">
-      <div class="float-end">
-        <button type="submit" class="btn btn-primary" name="button" value="apply">Create</button>
-        <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
-      </div>
+      {% include 'apply_cancel.html' with apply='Create' %}
     </div>
   </form>
 {% endblock %}
