--- a/kooplexhub/hub/templates/container/new.html
+++ b/kooplexhub/hub/templates/container/new.html
@@ -5,7 +5,7 @@
         <h5 class="modal-title" id="titleNewContainer">Name your new service environment</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form id="project_new" class="form-horizontal" action="{% url 'project:new' %}" method="post">
+      <form id="service_new" class="form-horizontal" action="{% url 'service:new' %}" method="post">
        {% csrf_token %}
         <div class="modal-body">
           <table>
@@ -14,8 +14,7 @@
           <input type="hidden" name="user_id" value="{{ user.id }}">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Create</button>
+          {% include 'apply_cancel.html' with modal=True apply='Create' %}
         </div>
       </form>
     </div>
