--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -15,10 +15,7 @@
     {% else %}
       <p>You do not have any projects to hide or show.</p>
     {% endif %}
-  <div class="float-end">
-    <button type="submit" class="btn btn-primary" name="button" value="apply">Apply settings</button>
-    <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
-  </div>
+    {% include 'apply_cancel.html' %}
   </form>
 </div> <!-- container -->
 {% endblock %}
