--- a/kooplexhub/hub/templates/report/partial.html
+++ b/kooplexhub/hub/templates/report/partial.html
@@ -1,49 +1,45 @@
-{% load render_table from django_tables2 %}
-<div class="col-md-6" >
-  <div class="row" >
-      <div class="report-row" style="border-top: #173651; border-top-style: none; border-top-style: double;width: 100%;">
-	  <div style="position: absolute; top: 10px; right: 10px; ">
-		{% if image.imagetype == image.TP_REPORT_HTML  %}
-	              <span class="badge badge-pill badge-info" style="min-width: 50px; padding-top: 5px; padding-bottom: 5px;">HTML</span>
-		      <!-- FIXME -->
-		{% elif report.reporttype == report.TP_DYNAMIC  %}
-	              <span class="badge badge-pill badge-success" style="min-width: 50px; padding-top: 5px; padding-bottom: 5px;">NB</span>
-		{% elif report.reporttype == report.TP_SERVICE  %}
-	              <span class="badge badge-pill badge-warning" style="min-width: 50px; padding-top: 5px; padding-bottom: 5px;">API</span>
-		{% elif report.reporttype == report.TP_BOKEH  %}
-	              <span class="badge badge-pill badge-primary" style="min-width: 50px; padding-top: 5px; padding-bottom: 5px;">BOKEH</span>
-	        {% endif %}
- 	  </div>
-	  
-	  <h6  id="heading-{{ report.id }}">
-		 <a href="{% url 'report:openreport' report.id %}" {% if report.reporttype != report.TP_SERVICE %} target="_blank" {% endif %} role="button" class="btn btn-secondary" style="text-align: right;" title="Open">  <span class="oi oi-eye" aria-hidden="true"> </span>
-			  <strong>{{ report.name }}</strong>
-		 </a>
-			  <button class="fas btn btn-vmi collapsed" data-toggle="modal" data-target="#modal-{{ report.tag }}-{{ report.id }}" aria-expanded="true" aria-controls="modal-{{ report.tag }}-{{ report.id }}">
-				  <span class="oi oi-pencil"></span>
-			  </button>
-	</h6>
-	</div>
+<div class="col">
+  <div class="card border-success shadow">
+    <div class="card-header bg-secondary text-dark">
+      <strong>{{ report.name }}</strong>
+      {% if report.service.state == report.service.ST_RUNNING %}
+        <div class="float-end">
+          <a href="{% url 'report:openreport' report.id %}" target="_blank" role="button" class="btn btn-dark btn-sm"><span class="oi oi-external-link" aria-hidden="true"></span></a>
+        </div>
+      {% endif %}
+    </div>
+    <div class="card-body">
+      <p class="card-text">{{ report.description }}</p>
+    </div>
+    <div class="card-footer bg-secondary text-dark">
+      <div class="float-end">
+        <button class="btn btn-light btn-sm" data-bs-toggle="modal" data-bs-target="#modal-{{ report.id }}" aria-expanded="true" aria-controls="modal-{{ report.id }}"><span class="oi oi-pencil"></span></button>
+	{% if report|authorize:user %}
+          <a href="{% url 'report:refresh' report.id %}" role="button" class="btn btn-light btn-sm"><span class="oi oi-reload" aria-hidden="true"></span></a>
+	{% endif %}
+	{% if report.creator == user %}
+          <a href="{% url 'report:deletereport' report.id %}" role="button" class="btn btn-danger btn-sm"><span class="oi oi-trash" aria-hidden="true"></span></a>
+	{% endif %}
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- Modal -->
-<div class="modal" id="modal-{{ report.tag }}-{{ report.id }}" tabindex="-1" role="dialog" aria-labelledby="heading-{{ report.id }}" aria-hidden="false">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content" style="width: 700px;">
+<div class="modal fade" id="modal-{{ report.id }}" data-bs-keyboard="false" tabindex="-1" aria-labelledby="heading-{{ report.id }}" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{ report.name }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h5 class="modal-title" id="heading-{{ report.id }}">{{ report.name }}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-			  <strong>Creator: </strong>{{ report.creator.first_name }} {{ report.creator.last_name }} ({{ report.creator }})<br>
-			  <strong>Description: </strong>{{ report.description }}<br>
-			  <strong>Url: </strong><code>{{ report.url_external }}</code><br>
-			  {% comment %}
-			  {% render_table table %}
-			  {% endcomment %}
+        <p><strong>Creator:</strong> {{ report.creator.profile.name_and_username }}</p>
+        <p><strong>Description: </strong>{{ report.description }}</p>
+        <p><strong>Url: </strong><code>{{ report.url_external }}</code></p>
+      </div>
+      <div class="modal-footer">
+        {% include 'apply_cancel.html' with modal=True hide_apply=True cancel="Ok" %}
       </div>
     </div>
   </div>
