table style report scope

--- a/kooplexhub/hub/templates/container/hint_list.html
+++ b/kooplexhub/hub/templates/container/hint_list.html
@@ -1,7 +1,8 @@
 <div class="card"> 
   <h6 class="card-head">Environment</h6>
   <div class="card-body">
-    <p>Environment (aka Service) is a virtualized context with prepared software stack. </p>
+	  <p>Environment (aka Service) is a virtualized context with prepared software stack. <br>
+	  See the documentation for <a href="/docs/#/Containers/README.md" target="_blank">more</a></p>
   </div>
 </div>
 
